Crash after using Decimate or Remesh modifiers #34098

Closed
opened 2013-02-04 06:32:54 +01:00 by Robert M · 6 comments

%%%Hi,

- Short description of error ---

Blender crashes when I try to go into Edit mode, after applying Decimate or Remesh modifier.

- Blender version with error, and version that worked ---

It crashed with 2.65 and latest SVN.

- Operating System, Graphics card ---

Debian AMD64, AMD HD6850

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Add a UV-Sphere
  2. Tab into Edit mode and select some faces (but not all)
  3. Tab out of Edit mode, add a Decimate (or Remesh) modifier.
  4. Set Decimate parameters to: Collapse with Ratio 0.1 (or Remesh parameters with: Octree Depth=2) (Just to be sure that many faces get eliminated)
  5. Click "Apply" on the modifier
  6. Now Tab into Edit mode again and Blender should crash immediately.

I think Blender tries to restore the previous selection of the faces but fails.
%%%

%%%Hi, - Short description of error --- Blender crashes when I try to go into Edit mode, after applying Decimate or Remesh modifier. - Blender version with error, and version that worked --- It crashed with 2.65 and latest SVN. - Operating System, Graphics card --- Debian AMD64, AMD HD6850 - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Add a UV-Sphere 2. Tab into Edit mode and select some faces (but not all) 3. Tab out of Edit mode, add a Decimate (or Remesh) modifier. 4. Set Decimate parameters to: Collapse with Ratio 0.1 (or Remesh parameters with: Octree Depth=2) (Just to be sure that many faces get eliminated) 5. Click "Apply" on the modifier 6. Now Tab into Edit mode again and Blender should crash immediately. I think Blender tries to restore the previous selection of the faces but fails. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Can't redo r54283
Could you upload a blend file setup just before you press 'Apply' on the modifier?%%%

%%%Can't redo r54283 Could you upload a blend file setup just before you press 'Apply' on the modifier?%%%
Author

%%%ok here is a .blend file. Just click Apply and then enter Edit Mode.
%%%

%%%ok here is a .blend file. Just click Apply and then enter Edit Mode. %%%
Author

%%%Attaching crash log.%%%

%%%Attaching crash log.%%%

%%%This would only crash if you selected faces with high index values, explains why it was random :)

Interesting nobody discovered this before, fixed r54292.%%%

%%%This would only crash if you selected faces with high index values, explains why it was random :) Interesting nobody discovered this before, fixed r54292.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34098
No description provided.