fix [#34098] Crash after using Decimate or Remesh modifiers

converting a derived mesh to a mesh didnt clear its selection history, which could be invalid after applying a modifier.